--- a/app/index.html
+++ b/app/index.html
@@ -1,14 +1,15 @@
 <!doctype html>
-<html lang="en" ng-app="myApp">
+<html lang="en" ng-app="recipeBook">
 <head>
   <meta charset="utf-8">
-  <title>My AngularJS App</title>
+  <title>My Recipe Cards</title>
   <link rel="stylesheet" href="css/app.css"/>
 </head>
 <body>
   <ul class="menu">
-    <li><a href="#/view1">view1</a></li>
-    <li><a href="#/view2">view2</a></li>
+    <li><a href="#/home">Home</a></li>
+    <li><a href="#/recipes">My Recipes</a></li>
+    <li><a href="#/shopping">My Shopping List</a></li>
   </ul>
 
   <div ng-view></div>
